fixes invoice preview modal table overflowing on resize

--- a/source/scss/components/_tables.scss
+++ b/source/scss/components/_tables.scss
@@ -58,13 +58,23 @@
   }
 }
 
-#invoice-preview-table,
 #sales-table,
 #deposits-table {
   .even {
     background-color: $gray-light;
   }
   .odd {
+    background-color: $primary-3;
+  }
+}
+
+#invoice-preview-table tbody {
+
+  tr:nth-of-type(2n) {
+    background-color: $gray-light;
+  }
+
+  tr:nth-of-type(2n-1) {
     background-color: $primary-3;
   }
 }
